--- a/src/app/navigation/components/game-titlebar/game-titlebar.component.scss
+++ b/src/app/navigation/components/game-titlebar/game-titlebar.component.scss
@@ -40,7 +40,3 @@
     padding-bottom: 5%;
 }
 
-i
-{
-    font-size: 10px;
-}
